--- a/src/views/scss/widget/main.scss
+++ b/src/views/scss/widget/main.scss
@@ -1,17 +1,49 @@
 body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f0f0f0;
+}
+
+.buttons {
+  // background-color: green;
+  width: 800px;
+
+.coordinats {
+  width: 100px;
+  padding: 5px;
+  border: 1px solid black;
+}
+
+  .submit_clear {
+    appearance: none;
+    border: 0;
+    border-radius: 5px;
+    background: #4676d7;
+    color: #fff;
+    padding: 8px 16px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .submit_clear:hover {
+    background: #1d49aa;
+  }
+
+  .submit_clear:focus {
+    // outline: none;
+    // box-shadow: 0 0 0 4px #cbd6ee;
+  }
 }
 
 .myCanvas {
-    margin: 10px;
-    width: 500px;
-    height: 500px;
-    background-color: antiquewhite;
-    border: 1px solid black;
+  // margin: 10px;
+  width: 800px;
+  height: 600px;
+  background-color: rgb(222, 217, 211);
+  border: 1px solid black;
 }
-
