--- a/style.css
+++ b/style.css
@@ -55,17 +55,39 @@ input {
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
+  gap: 5px;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #f0f0f0;
 }
 
+.buttons {
+  width: 800px;
+}
+.buttons .coordinats {
+  width: 100px;
+  padding: 5px;
+  border: 1px solid black;
+}
+.buttons .submit_clear {
+  appearance: none;
+  border: 0;
+  border-radius: 5px;
+  background: #4676d7;
+  color: #fff;
+  padding: 8px 16px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.buttons .submit_clear:hover {
+  background: #1d49aa;
+}
 .myCanvas {
-  margin: 10px;
-  width: 500px;
-  height: 500px;
-  background-color: antiquewhite;
+  width: 800px;
+  height: 600px;
+  background-color: rgb(222, 217, 211);
   border: 1px solid black;
 }
 
